[package]
name = "problem_9"
version = "0.1.0"
authors = ["SherlockHolmes2020 <60126110+SherlockHolmes2020@users.noreply.github.com>"]
edition = "2018"

##Y2hhY2hhMjAtaWV0Zi1wb2x5MTMwNTpjNWdhbWU4ODg=
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
